Added docs script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "docs": "apidoc -i src/ -o apidoc/",
+    "create-docs": "apidoc -i src/ -o apidoc/",
+    "docs": "open apidoc/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
