--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API for price buddy",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "pg": "^7.4.3"
   },
