--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "API for price buddy",
   "main": "index.js",
   "dependencies": {
+  	"cheerio": "^1.0.0-rc.2",
+  	"request": "^2.87.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
