--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "currency-formatter": "^1.4.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
+    "parse-domain": "^2.1.2",
     "pg": "^7.4.3",
     "request": "^2.87.0",
     "uuid": "^3.2.1"
