--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "API for price buddy",
   "main": "index.js",
   "dependencies": {
+    "async": "^2.6.1",
     "cheerio": "^1.0.0-rc.2",
+    "child_process": "^1.0.2",
     "currency-formatter": "^1.4.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -12,6 +14,7 @@
     "parse-domain": "^2.1.2",
     "pg": "^7.4.3",
     "request": "^2.87.0",
+    "util": "^0.11.0",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
